remove usages of commons lang 2 (#423)
replace with native java